--- a/templates/home.html
+++ b/templates/home.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AH Gambling</title>
-   <link rel="icon" href="/favicon.ico" type="image/x-icon" sizes="32x32">
+    <link rel="icon" type="image/x-icon" href="/favicon.ico">
+
 
     <style>
         * { margin: 0; padding: 0; box-sizing: border-box; }
