--- a/templates/home.html
+++ b/templates/home.html
@@ -4,9 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AH Gambling</title>
-    <link rel="icon" type="image/x-icon" href="https://arcadehavengamble.vercel.app/favicon.ico">
-
-
+    <link rel="icon" type="image/x-icon" href="/favicon.ico?v=2">
+    
     <style>
         * { margin: 0; padding: 0; box-sizing: border-box; }
 
