--- a/templates/login.html
+++ b/templates/login.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login • AH Gambling</title>
-    <link rel="icon" type="image/x-icon" href="/favicon.ico">
+    <title>Login - AH Gambling</title>
+    <link rel="icon" type="image/x-icon" href="/favicon.ico?v=2">
+
     <style>
         * {
             margin: 0;
