--- a/templates/mines.html
+++ b/templates/mines.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mines - AH Gambling</title>
-    <link rel="icon" type="image/x-icon" href="/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="/favicon.ico?v=2">
 
     <style>
         * { margin: 0; padding: 0; box-sizing: border-box; }
@@ -1013,6 +1013,7 @@ function setMaxBet() {
     </script>
 </body>
 </html>
+
 
 
 
