--- a/templates/towers.html
+++ b/templates/towers.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Towers - AH Gambling</title>
-<link rel="icon" type="image/x-icon" href="/favicon.ico">
+<link rel="icon" type="image/x-icon" href="/favicon.ico?v=2">
 
 <style>
 * {
@@ -572,6 +572,7 @@ button:hover {
     </script>
 </body>
 </html>
+
 
 
 
